kubernetes/apps/forgejo/preview-host/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: preview-host
  namespace: forgejo
  labels:
    app.kubernetes.io/name: preview-host
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: preview-host
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
